Añade catálogo PDF de exportación